antlr_grammars/outputs/RUSynthParser.py
# Generated from RUSynth.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


import pymorphy3
import re

morph = pymorphy3.MorphAnalyzer()
pattern = re.compile(r"_[A-Z]{4}")

def get_tags(string):
    string = re.sub(pattern, "", string)
    return string, morph.parse(string)[0].tag

def add_subj(stack, string, tags):
    if "subj" in stack[-1]:
        return
    if tags.case == "nomn":
        stack[-1]["subj"] = (string, tags)
        return
    return

def add_verb(stack, string, tags):
    if "verb" in stack[-1]:
        return
    stack[-1]["verb"] = (string, tags)
    return

def check_clause(stack):
    if all(k in stack[-1] for k in ("subj", "verb")):
        print(f"Subj found - {stack[-1]['subj']}")
        print(f"Verb found - {stack[-1]['verb']}")
        if stack[-1]["verb"][1].tense == "past":
            if stack[-1]["verb"][1].gender == stack[-1]["subj"][1].gender:
                print("Agreement admitted")
                stack.pop()
                return
        if stack[-1]["verb"][1].tense in ("pres", "futr"):
            if stack[-1]["verb"][1].number == stack[-1]["subj"][1].number:
                print("Agreement admitted")
                stack.pop()
                return
        print("Disagreement found")
        stack.pop()
    return


class RUSynthParser ( Parser ):

    grammarFileName = "RUSynth.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'\\u0438_CONJ'", "'\\u043D\\u0435\\u0442_PRED'", 
                     "'\\u043D\\u0435_PRCL'" ]

    symbolicNames = [ "<INVALID>", "WS", "AND_CONJ", "NEG_V", "NEG_N", "NOUN", 
                      "CONJ", "VERB", "PRED", "INF", "ADJ", "ADV", "GRND", 
                      "PREP", "UNK" ]

    RULE_sentence = 0
    RULE_clause = 1
    RULE_dep_clause = 2
    RULE_sub_conj = 3
    RULE_prep_phrase = 4
    RULE_adj_phrase = 5
    RULE_noun_phrase = 6
    RULE_verb_phrase = 7
    RULE_grnd_phrase = 8
    RULE_inf_phrase = 9

    ruleNames =  [ "sentence", "clause", "dep_clause", "sub_conj", "prep_phrase", 
                   "adj_phrase", "noun_phrase", "verb_phrase", "grnd_phrase", 
                   "inf_phrase" ]

    EOF = Token.EOF
    WS=1
    AND_CONJ=2
    NEG_V=3
    NEG_N=4
    NOUN=5
    CONJ=6
    VERB=7
    PRED=8
    INF=9
    ADJ=10
    ADV=11
    GRND=12
    PREP=13
    UNK=14

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    stack = [{}]



    class SentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def clause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RUSynthParser.ClauseContext)
            else:
                return self.getTypedRuleContext(RUSynthParser.ClauseContext,i)


        def CONJ(self, i:int=None):
            if i is None:
                return self.getTokens(RUSynthParser.CONJ)
            else:
                return self.getToken(RUSynthParser.CONJ, i)

        def getRuleIndex(self):
            return RUSynthParser.RULE_sentence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentence" ):
                listener.enterSentence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentence" ):
                listener.exitSentence(self)




    def sentence(self):

        localctx = RUSynthParser.SentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sentence)
        self._la = 0 # Token type
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.clause()
                self.state = 24
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 21
                    self.match(RUSynthParser.CONJ)
                    self.state = 26
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 27
                self.clause()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 29
                    self.match(RUSynthParser.CONJ)
                    self.state = 30
                    self.clause()
                    self.state = 35
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 36
                self.clause()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 37
                self.clause()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def verb_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Verb_phraseContext,0)


        def grnd_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Grnd_phraseContext,0)


        def noun_phrase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RUSynthParser.Noun_phraseContext)
            else:
                return self.getTypedRuleContext(RUSynthParser.Noun_phraseContext,i)


        def getRuleIndex(self):
            return RUSynthParser.RULE_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClause" ):
                listener.enterClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClause" ):
                listener.exitClause(self)




    def clause(self):

        localctx = RUSynthParser.ClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_clause)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==12:
                    self.state = 40
                    self.grnd_phrase()


                self.state = 46
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 43
                        self.noun_phrase(0) 
                    self.state = 48
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 49
                self.verb_phrase(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.verb_phrase(0)
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 51
                        self.noun_phrase(0) 
                    self.state = 56
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 58
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 57
                    self.grnd_phrase()


                pass


            self._ctx.stop = self._input.LT(-1)
            check_clause(self.stack)
            self.stack.append({})
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Dep_clauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sub_conj(self):
            return self.getTypedRuleContext(RUSynthParser.Sub_conjContext,0)


        def clause(self):
            return self.getTypedRuleContext(RUSynthParser.ClauseContext,0)


        def verb_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Verb_phraseContext,0)


        def getRuleIndex(self):
            return RUSynthParser.RULE_dep_clause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDep_clause" ):
                listener.enterDep_clause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDep_clause" ):
                listener.exitDep_clause(self)




    def dep_clause(self):

        localctx = RUSynthParser.Dep_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_dep_clause)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.sub_conj()
                self.state = 63
                self.clause()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.sub_conj()
                self.state = 66
                self.verb_phrase(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_conjContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONJ(self):
            return self.getToken(RUSynthParser.CONJ, 0)

        def ADJ(self):
            return self.getToken(RUSynthParser.ADJ, 0)

        def getRuleIndex(self):
            return RUSynthParser.RULE_sub_conj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub_conj" ):
                listener.enterSub_conj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub_conj" ):
                listener.exitSub_conj(self)




    def sub_conj(self):

        localctx = RUSynthParser.Sub_conjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sub_conj)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            _la = self._input.LA(1)
            if not(_la==6 or _la==10):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prep_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREP(self):
            return self.getToken(RUSynthParser.PREP, 0)

        def noun_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Noun_phraseContext,0)


        def ADJ(self):
            return self.getToken(RUSynthParser.ADJ, 0)

        def getRuleIndex(self):
            return RUSynthParser.RULE_prep_phrase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrep_phrase" ):
                listener.enterPrep_phrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrep_phrase" ):
                listener.exitPrep_phrase(self)




    def prep_phrase(self):

        localctx = RUSynthParser.Prep_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_prep_phrase)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(RUSynthParser.PREP)
                self.state = 73
                self.noun_phrase(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(RUSynthParser.PREP)
                self.state = 75
                self.match(RUSynthParser.ADJ)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Adj_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADV(self):
            return self.getToken(RUSynthParser.ADV, 0)

        def ADJ(self):
            return self.getToken(RUSynthParser.ADJ, 0)

        def NEG_N(self):
            return self.getToken(RUSynthParser.NEG_N, 0)

        def adj_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Adj_phraseContext,0)


        def prep_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Prep_phraseContext,0)


        def dep_clause(self):
            return self.getTypedRuleContext(RUSynthParser.Dep_clauseContext,0)


        def getRuleIndex(self):
            return RUSynthParser.RULE_adj_phrase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdj_phrase" ):
                listener.enterAdj_phrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdj_phrase" ):
                listener.exitAdj_phrase(self)



    def adj_phrase(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RUSynthParser.Adj_phraseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_adj_phrase, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 79
                self.match(RUSynthParser.ADV)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 80
                    self.match(RUSynthParser.NEG_N)


                self.state = 83
                self.match(RUSynthParser.ADJ)
                pass

            elif la_ == 2:
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 84
                    self.match(RUSynthParser.NEG_N)


                self.state = 87
                self.match(RUSynthParser.ADV)
                self.state = 88
                self.match(RUSynthParser.ADJ)
                pass

            elif la_ == 3:
                self.state = 89
                self.match(RUSynthParser.ADJ)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 98
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 96
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = RUSynthParser.Adj_phraseContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_adj_phrase)
                        self.state = 92
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 93
                        self.prep_phrase()
                        pass

                    elif la_ == 2:
                        localctx = RUSynthParser.Adj_phraseContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_adj_phrase)
                        self.state = 94
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 95
                        self.dep_clause()
                        pass

             
                self.state = 100
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Noun_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._NOUN = None # Token

        def adj_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Adj_phraseContext,0)


        def noun_phrase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RUSynthParser.Noun_phraseContext)
            else:
                return self.getTypedRuleContext(RUSynthParser.Noun_phraseContext,i)


        def NOUN(self):
            return self.getToken(RUSynthParser.NOUN, 0)

        def NEG_N(self):
            return self.getToken(RUSynthParser.NEG_N, 0)

        def AND_CONJ(self):
            return self.getToken(RUSynthParser.AND_CONJ, 0)

        def dep_clause(self):
            return self.getTypedRuleContext(RUSynthParser.Dep_clauseContext,0)


        def getRuleIndex(self):
            return RUSynthParser.RULE_noun_phrase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNoun_phrase" ):
                listener.enterNoun_phrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNoun_phrase" ):
                listener.exitNoun_phrase(self)



    def noun_phrase(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RUSynthParser.Noun_phraseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_noun_phrase, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 102
                self.adj_phrase(0)
                self.state = 103
                self.noun_phrase(5)
                pass

            elif la_ == 2:
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==4:
                    self.state = 105
                    self.match(RUSynthParser.NEG_N)


                self.state = 108
                localctx._NOUN = self.match(RUSynthParser.NOUN)
                add_subj(self.stack, *get_tags((None if localctx._NOUN is None else localctx._NOUN.text)))
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 121
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        localctx = RUSynthParser.Noun_phraseContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_noun_phrase)
                        self.state = 112
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 114
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==2:
                            self.state = 113
                            self.match(RUSynthParser.AND_CONJ)


                        self.state = 116
                        self.noun_phrase(4)
                        pass

                    elif la_ == 2:
                        localctx = RUSynthParser.Noun_phraseContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_noun_phrase)
                        self.state = 117
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 118
                        self.adj_phrase(0)
                        pass

                    elif la_ == 3:
                        localctx = RUSynthParser.Noun_phraseContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_noun_phrase)
                        self.state = 119
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 120
                        self.dep_clause()
                        pass

             
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Verb_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._VERB = None # Token

        def NEG_N(self):
            return self.getToken(RUSynthParser.NEG_N, 0)

        def verb_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Verb_phraseContext,0)


        def NEG_V(self):
            return self.getToken(RUSynthParser.NEG_V, 0)

        def prep_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Prep_phraseContext,0)


        def inf_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Inf_phraseContext,0)


        def PRED(self):
            return self.getToken(RUSynthParser.PRED, 0)

        def VERB(self):
            return self.getToken(RUSynthParser.VERB, 0)

        def ADV(self, i:int=None):
            if i is None:
                return self.getTokens(RUSynthParser.ADV)
            else:
                return self.getToken(RUSynthParser.ADV, i)

        def noun_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Noun_phraseContext,0)


        def dep_clause(self):
            return self.getTypedRuleContext(RUSynthParser.Dep_clauseContext,0)


        def getRuleIndex(self):
            return RUSynthParser.RULE_verb_phrase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVerb_phrase" ):
                listener.enterVerb_phrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVerb_phrase" ):
                listener.exitVerb_phrase(self)



    def verb_phrase(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = RUSynthParser.Verb_phraseContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_verb_phrase, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 127
                self.match(RUSynthParser.NEG_N)
                self.state = 128
                self.verb_phrase(8)
                pass

            elif la_ == 2:
                self.state = 129
                self.match(RUSynthParser.NEG_V)
                pass

            elif la_ == 3:
                self.state = 130
                self.prep_phrase()
                self.state = 131
                self.verb_phrase(6)
                pass

            elif la_ == 4:
                self.state = 133
                self.inf_phrase(0)
                self.state = 134
                self.verb_phrase(5)
                pass

            elif la_ == 5:
                self.state = 136
                self.match(RUSynthParser.PRED)
                self.state = 137
                self.inf_phrase(0)
                pass

            elif la_ == 6:
                self.state = 138
                localctx._VERB = self.match(RUSynthParser.VERB)
                self.state = 139
                self.match(RUSynthParser.ADV)
                pass

            elif la_ == 7:
                self.state = 140
                localctx._VERB = self.match(RUSynthParser.VERB)
                add_verb(self.stack, *get_tags((None if localctx._VERB is None else localctx._VERB.text)))
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 160
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 158
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
                    if la_ == 1:
                        localctx = RUSynthParser.Verb_phraseContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_verb_phrase)
                        self.state = 144
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 146
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
                        if la_ == 1:
                            self.state = 145
                            self.match(RUSynthParser.ADV)


                        self.state = 151
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
                        if la_ == 1:
                            self.state = 148
                            self.noun_phrase(0)
                            pass

                        elif la_ == 2:
                            self.state = 149
                            self.prep_phrase()
                            pass

                        elif la_ == 3:
                            self.state = 150
                            self.dep_clause()
                            pass


                        self.state = 154
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
                        if la_ == 1:
                            self.state = 153
                            self.match(RUSynthParser.ADV)


                        pass

                    elif la_ == 2:
                        localctx = RUSynthParser.Verb_phraseContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_verb_phrase)
                        self.state = 156
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 157
                        self.inf_phrase(0)
                        pass

             
                self.state = 162
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Grnd_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GRND(self):
            return self.getToken(RUSynthParser.GRND, 0)

        def noun_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Noun_phraseContext,0)


        def prep_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Prep_phraseContext,0)


        def getRuleIndex(self):
            return RUSynthParser.RULE_grnd_phrase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrnd_phrase" ):
                listener.enterGrnd_phrase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrnd_phrase" ):
                listener.exitGrnd_phrase(self)




    def grnd_phrase(self):

        localctx = RUSynthParser.Grnd_phraseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_grnd_phrase)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.match(RUSynthParser.GRND)
                self.state = 164
                self.noun_phrase(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.match(RUSynthParser.GRND)
                self.state = 166
                self.prep_phrase()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.match(RUSynthParser.GRND)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inf_phraseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def noun_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Noun_phraseContext,0)


        def inf_phrase(self):
            return self.getTypedRuleContext(RUSynthParser.Inf_phraseContext,0)

